--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,6 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
         {% endblock %}
@@ -10,8 +9,42 @@
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
+
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+        <!-- Bootstrap core CSS -->
+        <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Additional CSS Files -->
+        <link rel="stylesheet" href="/assets/css/fontawesome.css">
+        <link rel="stylesheet" href="/assets/css/templatemo-villa-agency.css">
+        <link rel="stylesheet" href="/assets/css/owl.css">
+        <link rel="stylesheet" href="/assets/css/animate.css">
+        <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+
+        <title>Villa Agency co. - Leader de l'immobilier de luxe</title>
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <section>
+                {% include 'layout/header.html.twig' %}
+            <main>
+                {% block content %}
+                {% endblock %}
+            </main>
+            <footer>
+                {% include 'layout/footer.html.twig' %}
+            </footer>  
+        </section> 
+
+         <!-- Scripts -->
+        <!-- Bootstrap core JavaScript -->
+        <script src="/assets/jquery/jquery.min.js"></script>
+        <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/isotope.min.js"></script>
+        <script src="/assets/js/owl-carousel.js"></script>
+        <script src="/assets/js/counter.js"></script>
+        <script src="/assets/js/custom.js"></script>
     </body>
 </html>
