--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -1,5 +1,5 @@
 <div class="container">
     <div class="col-lg-8">
-        <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. 
+        <p>Copyright © 2024 Luxury Villa Agency Co., Ltd. All rights reserved. 
     </div>
 </div>
