--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -33,7 +33,7 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="{{ path('app_home') }}">Home</a></li>
-                      <li><a href="#">Properties</a></li>
+                      <li><a href="{{ path('properties') }}">Properties</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
                       <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
                   </ul>   
