--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Additional CSS Files -->
+        <link rel="stylesheet" href="/assets/css/main.css">
         <link rel="stylesheet" href="/assets/css/fontawesome.css">
         <link rel="stylesheet" href="/assets/css/templatemo-villa-agency.css">
         <link rel="stylesheet" href="/assets/css/owl.css">
@@ -27,16 +28,14 @@
         <title>Villa Agency co. - Leader de l'immobilier de luxe</title>
     </head>
     <body>
-        <section>
-                {% include 'layout/header.html.twig' %}
-            <main>
+            {% include 'layout/header.html.twig' %}
+            <main class="main" style="padding-bottom: 150px;">
                 {% block content %}
                 {% endblock %}
             </main>
             <footer>
                 {% include 'layout/footer.html.twig' %}
-            </footer>  
-        </section> 
+            </footer>
 
          <!-- Scripts -->
         <!-- Bootstrap core JavaScript -->
